# vps_manager

./: .flake8  .gitignore  .pre-commit-config.yaml  pyproject.toml
api/: admin.py  models.py
api/tests/: test_filters.py  test_serializers.py  test_viewsets.py
api/v1/: filters.py  schema.py  serializers.py  urls.py  views.py
locale/ru/LC_MESSAGES/: django.mo  django.po
vps_manager/: asgi.py  settings.py  urls.py  wsgi.py
