[tool.poetry]
name = "vps-manager"
version = "0.1.0"
description = ""
authors = ["Gricana"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.1.4"
djangorestframework = "^3.15.2"
flake8 = "^7.1.1"
black = "^24.10.0"
django-filter = "^24.3"
drf-yasg = "^1.21.8"
pre-commit = "^4.0.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
black = "^24.10.0"
flake8-black = "^0.3.6"
isort = "^5.13.2"
pre-commit = "^4.0.1"

[tool.black]
line-length = 88
target-version = ['py313']
skip-string-normalization = true

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
